kubernetes/stateful-sets/dns-srv-resolve-app/infra/k8s/storage-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: storage-app-stateful-set
spec:
    replicas: 3
    serviceName: storage-headless-service
    selector:
        matchLabels:
            app: storage
    template:
        metadata:
            labels:
                app: storage
        spec:
            containers:
                - name: stateful
                  image: stateful
                  imagePullPolicy: Never
                  ports:
                      - name: http
                        containerPort: 5000
                        protocol: TCP
                  volumeMounts:
                      - name: data
                        mountPath: /data
    volumeClaimTemplates:
        - apiVersion: v1
          kind: PersistentVolumeClaim
          metadata:
              name: data
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: 100Mi
