kubernetes/stateful-sets/dns-srv-resolve-app/infra/k8s/storage-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: storage-clusterip-service
spec:
    selector:
        app: storage
    ports:
        - name: http
          port: 5000
          targetPort: http
          protocol: TCP
