kubernetes/stateful-sets/dns-srv-resolve-app/infra/k8s/storage-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: storage-headless-service
spec:
    clusterIP: None
    selector:
        app: storage
    ports:
        - name: http
          port: 5000
          targetPort: http
          protocol: TCP
