kubernetes/stateful-sets/dns-srv-resolve-app/infra/k8s/storage-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: storage-ingress
    annotations:
        kubernetes.io/service.class: 'nginx'
spec:
    rules:
        - http:
              paths:
                  - path: /api/storage
                    backend:
                        serviceName: storage-clusterip-service
                        servicePort: http
